@@ -1,3 +1,8 @@
+2012-01-04	The InnoDB Team
+
+	* row/row0mysql.c:
+	Fix Bug#12400341: INNODB CAN LEAVE ORPHAN IBD FILES AROUND
+
 2011-12-21	The InnoDB Team
 
 	* include/ut0rnd.ic:
